# entrevistador

./: Dockerfile  README.md  docker-compose.yml  entrevistador_final.txt  plan.md  pyproject.toml  todo_list.md
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: interview.py
app/core/: __init__.py  context_anchor.py  defaults_repository.py  gates.py  llm_service.py  orchestrator.py  phase_registry.py  scoring.py
app/models/: __init__.py  contracts.py
app/phases/: __init__.py  capture.py  checkpoints.py  default_runner.py  generation.py  graphs.py  inference.py  validation_panel.py
app/storage/: __init__.py  postgres_session_store.py  session_store.py
app/validators/: __init__.py  cross_validators.py  fase17_rules.py  fase9_rules.py
app/workers/: __init__.py
entrevistador_v6.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile_falso  index.html  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/agents/: architect.ts  formatters.ts  humanizador.ts  tecnificador.ts
frontend/src/agents/phases/: fase0-formatter.ts  fase1-formatter.ts  fase2-formatter.ts  fase3-formatter.ts  fase3b-formatter.ts  fase4-formatter.ts  fase5-formatter.ts  fase6-formatter.ts  fase7-formatter.ts  fase7b-formatter.ts  (+3 more)
frontend/src/components/: ChatScreen.tsx  PhaseStepper.tsx  ProposalChecklist.tsx  SetupScreen.tsx  StatusPanel.tsx
frontend/src/patterns/: index.ts
frontend/src/services/: llm.ts
